# contracts

./: .gitignore  Cargo.toml  README.md
assets/: Cargo.toml
assets/src/: actions.rs  apply.rs  asset.rs  contract.rs  lib.rs
prize-pool/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  state-clean.py  test.sh
prize-pool/scripts/: build.sh  clear-state.sh  deploy.sh  dev-deploy.sh  prize-draw-cron-task.py  state-clean.py  variables.sh
prize-pool/src/: accounts.rs  asset.rs  lib.rs  prize.rs  prize_pool.rs  twitter_giveaway.rs  utils.rs
prize-pool/tests/: test.rs  test_deposit_withdraw.rs
prize-pool/tests/common/: constant.rs  contracts.rs  mod.rs  utils.rs
test-token/: build.sh
