[package]
name="prize-pool"
version = "1.0.0"
authors = ["xsb <389483673@qq.com>"]
edition="2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
itertools = "0.10.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = {path = "../test-token"}